--- a/src/styles.css
+++ b/src/styles.css
@@ -25,7 +25,7 @@ button {
 
 .text {
   color: var(--typography-primary);
-  font-family: "Euclid Circular A, Arial";
+  font-family: "Euclid Circular A", Arial;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -56,6 +56,7 @@ button {
 }
 
 .link {
+  color: #1930E5;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
